Enlazo imagen página principal al blog

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: Home
 ---
 
 <div class="hero">
-  <img src="{{ site.baseurl }}{{ site.home.image }}" />
+  <a href="{{ site.baseurl }}{{ site.nav.Blog }}">
+    <img src="{{ site.baseurl }}{{ site.home.image }}" />
+  </a>
   <p>{{ site.home.caption }}</p>
 </div>
