--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 <div class="hero">
-  <a href="{{ site.baseurl }}{{ site.nav.Blog }}">
+  <a href="{{ site.baseurl }}{{ site.nav.Blog[0] }}">
     <img src="{{ site.baseurl }}{{ site.home.image }}" />
   </a>
   <p>{{ site.home.caption }}</p>
